# some-cpp-examples

./: .gitignore  CMakeLists.txt
app/: clean.sh  run.sh
app_chrono/: CMakeLists.txt  Chrono.cpp  Chrono.h
include/: AChrono.hpp  Array.hpp  Chrono.hpp  FakeMath.hpp  Point.hpp  PointFriend.hpp  PointFriend.tpp
src/: CMakeLists.txt  main.cpp
src/app_chrono/: CMakeLists.txt  Chrono.cpp
src/app_friend/: CMakeLists.txt  Point.cpp  PointFriend.cpp
test/: CMakeLists.txt  main.cpp
test/chrono/: CMakeLists.txt  ChronoTest.cpp  ChronoTest.hpp
